--- a/default.css
+++ b/default.css
@@ -23,9 +23,6 @@
             
         }
 
-        body {
-            overflow-x: hidden!important;
-        }
 
         main {
             max-width: 1200px;
@@ -52,7 +49,8 @@ a, p, div, i {
 body {
     width: 100vw-15px;
     height:initial;
-    border: #8B3535 7.5px solid;;
+    border: #8B3535 7.5px solid;
+    overflow-x: hidden;
 }
 
 div .top-bar {
